--- a/core/template/dashboard/ondilo.html
+++ b/core/template/dashboard/ondilo.html
@@ -12,7 +12,7 @@
   <div class="row row-overflow">
     <div class="col-xs-4 center">#temperature# °</div>
     <div class="col-xs-4"></div>
-    <div class="col-xs-4"></div>
+    <div class="col-xs-4">Sel<br/>#salt# mg/l</div>
   </div>
   <div class="row row-overflow">
     <div class="col-xs-4"></div>
