bugfix tds and salt widget

--- a/core/template/dashboard/salt.html
+++ b/core/template/dashboard/salt.html
@@ -12,7 +12,7 @@
   <div class="row row-overflow">
     <div class="col-xs-4 center">#temperature# °</div>
     <div class="col-xs-4"></div>
-    <div class="col-xs-4">Sel<br/>#salt# mg/l</div>
+    <div class="col-xs-4"></div>
   </div>
   <div class="row row-overflow">
     <div class="col-xs-4"></div>
@@ -22,7 +22,7 @@
   <div class="row row-overflow">
     <div class="col-xs-4 center">Redox<br/>#orp# mV</div>
     <div class="col-xs-4 center">pH<br/>#ph#</div>
-    <div class="col-xs-4 center">TDS<br/>#tds# ppm</div>
+    <div class="col-xs-4 center">Sel<br/>#salt# mg/l</div>
   </div>
 
 </div>
