--- a/core/template/dashboard/tds.html
+++ b/core/template/dashboard/tds.html
@@ -11,8 +11,8 @@
   </div>
   <div class="row row-overflow">
     <div class="col-xs-4 center">#temperature# °</div>
-    <div class="col-xs-4"></div>
-    <div class="col-xs-4"></div>
+    <div class="col-xs-4">Signal #rssi# %</div>
+    <div class="col-xs-4">Batterie #battery# %</div>
   </div>
   <div class="row row-overflow">
     <div class="col-xs-4"></div>
