change sort array lastseen

--- a/core/template/dashboard/salt.html
+++ b/core/template/dashboard/salt.html
@@ -24,6 +24,11 @@
     <div class="col-xs-4 center">pH<br/>#ph#</div>
     <div class="col-xs-4 center">Sel<br/>#salt# mg/l</div>
   </div>
+  <div class="row row-overflow">
+    <div class="col-xs-12 left">
+      <i class="fas fa-sync"></i> #last_seen#
+    </div>
+  </div>
 
 </div>
 <script type="text/javascript">
